--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
-    "marked": "^17.0.1"
+    "katex": "^0.16.25",
+    "marked": "^17.0.1",
+    "marked-katex-extension": "^5.1.6"
   }
 }
