feat: Implement syntax highlighting with marked-highlight and dark mode improvements

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "easymde": "^2.20.0",
+    "highlight.js": "^11.11.1",
     "katex": "^0.16.25",
     "marked": "^17.0.1",
+    "marked-highlight": "^2.2.3",
     "marked-katex-extension": "^5.1.6"
   }
 }
