--- a/package.json
+++ b/package.json
@@ -1,22 +1,35 @@
 {
-  "name": "llm_log",
+  "name": "temp_next_app",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^7.2.4"
+    "dev": "next dev --webpack",
+    "build": "next build --webpack",
+    "start": "next start",
+    "lint": "eslint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "easymde": "^2.20.0",
     "highlight.js": "^11.11.1",
-    "katex": "^0.16.25",
+    "katex": "^0.16.27",
+    "lucide-react": "^0.556.0",
     "marked": "^17.0.1",
     "marked-highlight": "^2.2.3",
-    "marked-katex-extension": "^5.1.6"
+    "marked-katex-extension": "^5.1.6",
+    "next": "16.0.8",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
+    "react-simplemde-editor": "^5.2.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.8",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
