--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "temp_next_app",
+  "homepage": "https://sweon.github.io/llm_log",
   "version": "0.1.0",
   "private": true,
   "scripts": {
